fix footer mobile style bleed over, switch out float and mid-align with table-cell alignments

--- a/injection/footer/_footer.scss
+++ b/injection/footer/_footer.scss
@@ -140,6 +140,13 @@
         width: auto;
       }
 
+      li:first-child + li,
+      li:first-child + li + li + li,
+      li:first-child + li + li + li + li + li,
+      li:first-child + li + li + li + li + li + li + li {
+        margin-left: 0;
+      }
+
       a {
         @include rem(font-size, 15px);
       }
