--- a/templates/components/globals/banners.scss
+++ b/templates/components/globals/banners.scss
@@ -8,7 +8,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: $white;
+    display: table;
     position: relative;
+    width: 100%;
 
     &.tight {
       margin-bottom: 0;
@@ -105,8 +107,12 @@
     }
 
     .mid-align {
+      display: table-cell;
+      padding-bottom: 0;
+      padding-top: 0;
       position: relative;
       text-align: center;
+      vertical-align: middle;
       width: 100%;
 
       h1 {
@@ -121,8 +127,6 @@
       }
 
       @include breakpoint(tablet) {
-        @include rem(height, 700px);
-        @include rem(padding, 260px 0 180px);
         h1 {
           @include rem(padding-bottom, 30px);
           margin: auto;
@@ -130,14 +134,12 @@
       }
 
       @include breakpoint(height-smallest) {
-        @include rem(padding, 180px 0);
         h1 {
           @include rem(padding-bottom, 30px);
         }
       }
 
       @media screen and (min-width: 481px) and (max-height:639px) {
-        @include rem(padding, 180px 0);
         h1 {
           @include rem(padding-bottom, 30px);
         }
